--- a/src/components/statistics/statistics.module.scss
+++ b/src/components/statistics/statistics.module.scss
@@ -34,8 +34,8 @@
 }
 
 .balance .header {
-    color: $dark-green;
-    font-size: 22px;
+    color: $light-green;
+    font-size: 25px;
 }
 
 .income .header {
